--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
     "axios": "^1.8.4",
+    "libphonenumber-js": "^1.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
